// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 eswuvT"
    color="info"
  />
</div>
`;

exports[`Spinner should render a danger color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 lbpjxi"
    color="danger"
  />
</div>
`;

exports[`Spinner should render a hint color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 hlzuQD"
    color="hint"
  />
</div>
`;

exports[`Spinner should render a info color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 eswuvT"
    color="info"
  />
</div>
`;

exports[`Spinner should render a large one 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 bUpAir"
    color="info"
  />
</div>
`;

exports[`Spinner should render a small one 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 ePbwVf"
    color="info"
  />
</div>
`;

exports[`Spinner should render a success color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 iPuTgw"
    color="success"
  />
</div>
`;

exports[`Spinner should render a warning color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 deWhfd"
    color="warning"
  />
</div>
`;
